<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ssi.atucasa.DeliveryAddress$AddressFragment">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

    <EditText android:id="@+id/txtStreet"
              android:layout_height="wrap_content"
              android:layout_width="210dp"
              android:hint="@string/strStreet"
              android:inputType="text"/>

    <TextView android:id="@+id/txtViewNumber"
              android:layout_width="30dp"
              android:layout_height="wrap_content"
              android:gravity="left"
              android:textSize="20dip"
              android:textColor="#0b84aa"
              android:text="@string/strNro"/>

    <EditText android:id="@+id/txtStreetNro"
              android:layout_height="wrap_content"
              android:layout_width="90dp"
              android:hint="@string/strStreetNro"
              android:inputType="text"/>

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

    <TextView android:id="@+id/txtViewBeetwenStreet"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="20dip"
        android:textColor="#0b84aa"
        android:text="@string/strBeetwen"/>

    <EditText android:id="@+id/txtStreetRef1"
              android:layout_height="wrap_content"
              android:layout_width="290dp"
              android:hint="@string/strStreetRef1"
              android:inputType="text"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

    <TextView android:id="@+id/txtViewAnd"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="20dip"
        android:textColor="#0b84aa"
        android:text="@string/strAnd"/>

    <EditText android:id="@+id/txtStreetRef2"
              android:layout_height="wrap_content"
              android:layout_width="290dp"
              android:hint="@string/strStreetRef2"
              android:inputType="text"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

    <EditText android:id="@+id/txtBuilding"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:hint="@string/strBuilding"
              android:inputType="text"/>

    <EditText android:id="@+id/txtPhoneNumber"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:hint="@string/strPhoneNumber"
              android:inputType="text"/>

    </LinearLayout>

    <!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:orientation="horizontal">

         <ImageButton
             android:id="@+id/imgButtonSaveAdd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/save_address"
             android:layout_gravity="center_horizontal|left"
             android:adjustViewBounds="true"/>

         <ImageButton
             android:id="@+id/imgButtonListAdd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/address_list_icon"
             android:layout_gravity="center_horizontal|right"
             android:adjustViewBounds="true"/>

    </LinearLayout>-->
</LinearLayout>
</ScrollView>